project-001/templates/sentence-processor/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sentence-processor
  name: sentence-processor
  namespace: project-001
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: sentence-processor
  type: ClusterIP
