project-001/templates/sentence-processor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.passthrough: "true"
    cert-manager.io/cluster-issuer: vault-issuer
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-secure-access@kubernetescrd
  labels:
    app.kubernetes.io/name: sentence-processor
  name: sentence-processor
spec:
  ingressClassName: traefik
  rules:
    - host: sentence-processor.127.0.0.1.sslip.io
      http:
        paths:
          - backend:
              service:
                name: sentence-processor
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sentence-processor.127.0.0.1.sslip.io
      secretName: sentence-processor-tls
